@@ -1,3 +1,9 @@
+2012-08-02  Sean Keys  <skeys@ipdatasys.com>
+
+	* elf32-m68hc1x.c (elf32_m68hc11_relocate_section): Modified
+	conditional statment to allow suppression of mismatched bank
+	warning.
+
 2012-08-01  Alan Modra  <amodra@gmail.com>
 
 	* dwarf2.c (struct dwarf2_debug): Add close_on_cleanup.
